# folder-organizer

./: .gitignore  CREATE_OFFLINE_PACKAGE.bat  Cargo.toml  LINUX_SETUP.md  README.md  SHARING_INSTRUCTIONS.md  folder-organizer-gui.html  folder-organizer-portable.bat  folder-organizer.sh  index.html  organize.bat  package-lock.json  package.json  vite.config.js
OFFLINE_PACKAGE/: build-linux.sh  organize-interactive.bat
OFFLINE_PACKAGE/source/: Cargo.toml  error.rs  organizer.rs
src/: App.vue  error.rs  main.rs  organizer.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  organizer.rs
