[package]
name = "folder-organizer"
version = "0.1.0"
description = "Folder Organizer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "folder-organizer"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] } 
